# cllm

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Cllmfile.yml  Dockerfile  README.md  pyproject.toml
.claude/: settings.local.json
.claude/skills/adr/: SKILL.md
.claude/skills/adr-review/: SKILL.md
.claude/skills/conventional-commit/: SKILL.md
.cllm/: Cllmfile.yml  README.md  adr.Cllmfile.yml  analyze.Cllmfile.yml  code-review.Cllmfile.yml  commit.Cllmfile.yml  custom-scripts.Cllmfile.yml  debug.Cllmfile.yml  docs.Cllmfile.yml  dynamic-debug.Cllmfile.yml  explain.Cllmfile.yml  refactor.Cllmfile.yml  research.Cllmfile.yml  test.Cllmfile.yml  think.Cllmfile.yml  troubleshoot.Cllmfile.yml
.cllm/schemas/: bash.yml  document.yml  function.yml  graph.yml  list.yml  list2.yml  python.yml  query.yml  search.yml  splitter.yml
.cllm/systems/: base.yml
.cllm/systems/bedrock/: command-r.yml  haiku.yml  llama.yml  mistral.yml  sonnet.yml
.cllm/systems/c/: full.yml  graph.yml  summarize.yml
.cllm/systems/claude/: haiku.yml  opus.yml  sonnet.yml
.cllm/systems/gemini/: flash.yml  pro.yml
.cllm/systems/gpt/: 3.5.yml  4.yml  4o.yml
.cllm/systems/groq/: gemma.yml  llama.yml  mixtral.yml
.cllm/systems/l/: llama.yml  phi.yml  qwen.yml
.cllm/templates/: default.tpl  qa.tpl  rag-qa.tpl  schema.tpl
.github/workflows/: ci.yml  gemini-cli.yml  gemini-issue-automated-triage.yml  gemini-issue-scheduled-triage.yml  gemini-pr-review.yml  opencode.yml  release.yml
cllm/: cllm.py  constants.py
cllm/toolkit/: gen_dalle.py  listen.py  load_dir.py  load_files.py  load_search_google.py  load_sitemap.py  load_website.py  output_code.py  prompt.py  repeater.py  search_google.py  speech_text.py  splitter_docs.py  splitter_text.py  vector_faiss.py  vector_faiss_load.py  vector_faiss_write.py
docs/: README.md  ci-and-release.md  cllm.md
docs/decisions/: 0001-use-uv-as-package-manager.md  0002-implementation-notes.md  0002-use-litellm-for-llm-provider-abstraction.md  0003-cllmfile-configuration-system.md  0004-add-list-models-cli-flag.md  0005-add-structured-output-support.md  0006-support-remote-json-schema-urls.md  0007-conversation-threading-and-context-management.md  0008-add-bash-script-examples.md  0009-add-debugging-and-logging-support.md  0010-implement-litellm-streaming-support.md  0011-dynamic-context-injection-via-command-execution.md  0012-variable-expansion-in-context-commands.md  0013-llm-driven-dynamic-command-execution.md  0014-json-structured-output-with-allow-commands.md  0015-add-init-command-for-directory-setup.md  0016-configurable-cllm-directory-path.md  0017-configurable-conversations-path.md  0018-read-only-conversation-flag.md  0019-ci-and-release-process.md  0020-capture-system-prompt-in-conversation-data.md  0021-context-injection-as-persistent-system-context.md
docs/toolkit/: README.md  cllm-gen-dalle.md  cllm-listen.md  cllm-load-dir.md  cllm-load-files.md  cllm-load-google-search.md  cllm-load-search-google.md  cllm-load-sitemap.md  cllm-load-webpages.md  cllm-load-website.md  cllm-output-code.md  cllm-prompt.md  cllm-repeater.md  cllm-speech-text.md  cllm-splitter-docs.md  cllm-splitter-text.md  cllm-vector-faiss-load.md  cllm-vector-faiss-write.md  cllm-vector-faiss.md
examples/: README.md  async_usage.py  basic_usage.py  demo_context_injection.sh  provider_comparison.py  structured_output_usage.py
examples/bash/: README.md  cron-digest.sh  git-diff-review.sh  prompt-loop.sh  templated-context.sh
examples/chat/: basic.sh  vision.sh  voice-vision.sh  voice.sh
examples/configs/: Cllmfile.yml  README.md  code-review.Cllmfile.yml  context-demo.Cllmfile.yml  creative.Cllmfile.yml  debug.Cllmfile.yml  extraction.Cllmfile.yml  summarize.Cllmfile.yml  task-parser.Cllmfile.yml
examples/function_calling/: chat_os.sh  os_functions.sh
examples/graph/: story.sh
examples/logo/: cllm-clam.sh
examples/ollama/: multi-llm.sh
examples/rag/: chat.sh
examples/schemas/: README.md  entity-extraction.json  person.json  sentiment.json
examples/storywriter/: story-writer.sh  write.sh
examples/utilities/: ai-aws  ai-docker  ai-shell  qa  summerize
spikes/: README.md  streaming_spike.py
src/cllm/: __init__.py  agent.py  cli.py  client.py  config.py  context.py  conversation.py  init.py  templates.py  tools.py
tests/: __init__.py  test_agent.py  test_cli.py  test_client.py  test_config.py  test_context.py  test_conversation.py  test_init.py  test_templates.py  test_tools.py
tests/examples/: test_bash_examples.py
