[project]
name = "cllm"
version = "0.1.5"
description = "A bash-centric command-line interface for interacting with large language models"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "O3 Cloud Team" }]
keywords = [
  "llm",
  "cli",
  "ai",
  "openai",
  "anthropic",
  "claude",
  "gpt",
  "command-line",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "jinja2>=3.1.6",
  "jsonschema>=4.23.0",
  "litellm>=1.79.0",
  "pyyaml>=6.0.3",
  "requests>=2.32.4",
]

[project.scripts]
cllm = "cllm.cli:main"

[project.urls]
Homepage = "https://github.com/o3-cloud/cllm"
Documentation = "https://github.com/o3-cloud/cllm/wiki"
Repository = "https://github.com/o3-cloud/cllm"
Issues = "https://github.com/o3-cloud/cllm/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cllm"]

[tool.uv]
dev-dependencies = ["pytest>=8.3.5", "pytest-asyncio>=0.24.0"]
