[project]
name = "cllm"
version = "0.1.6"
description = "A bash-centric command-line interface for interacting with large language models"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "O3 Cloud Team" }]
keywords = [
  "llm",
  "cli",
  "ai",
  "openai",
  "anthropic",
  "claude",
  "gpt",
  "command-line",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "jinja2>=3.1.6",
  "jsonschema>=4.23.0",
  "litellm>=1.79.0",
  "pyyaml>=6.0.3",
  "requests>=2.32.4",
]

[project.scripts]
cllm = "cllm.cli:main"

[project.urls]
Homepage = "https://github.com/o3-cloud/cllm"
Documentation = "https://github.com/o3-cloud/cllm/wiki"
Repository = "https://github.com/o3-cloud/cllm"
Issues = "https://github.com/o3-cloud/cllm/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cllm"]

[tool.uv]
dev-dependencies = [
  "mypy>=1.12.0",
  "pytest>=8.3.5",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.7",
  "types-jsonschema>=4.23.0.20240923",
  "types-PyYAML>=6.0.12.20240908",
  "types-requests>=2.32.0.20241016",
]

[tool.pytest.ini_options]
addopts = "--cov=src/cllm --cov-report=term-missing"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.8"
strict = true
namespace_packages = true
pretty = true
show_error_codes = true
implicit_optional = false
warn_unused_configs = true
warn_unreachable = true
# Gradual type adoption strategy: Currently checking conversation.py (fully typed)
# TODO: Expand to all of src/cllm/ after addressing type issues in other modules
# Running `mypy src/cllm/` reveals 66 errors across 6 files that need fixing
files = ["src/cllm/conversation.py"]

[[tool.mypy.overrides]]
module = ["tests.*"]
strict = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
warn_return_any = false
warn_unused_ignores = false

[tool.ruff]
target-version = "py38"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "Q", "RUF"]
ignore = ["E203", "E501"]
